Kubernetes/apps/immich/ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
  namespace: utilities
  labels:
    app: immich-ml
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      enableServiceLinks: false
      nodeSelector:
        intel.feature.node.kubernetes.io/gpu: "true"

      containers:
        - name: immich-ml
          image: ghcr.io/immich-app/immich-machine-learning:v3.3.0-openvino
          ports:
            - name: http
              containerPort: 3003
          volumeMounts:
            - name: cache
              mountPath: /cache
          resources:
            requests:
              cpu: 100m
              memory: 4Gi
              gpu.intel.com/xe: "1"
            limits:
              cpu: 4000m
              memory: 8Gi
              gpu.intel.com/xe: "1"
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60

      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: immich-ml-local-cache
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  namespace: utilities
spec:
  ports:
    - name: http
      port: 3003
      targetPort: http
  selector:
    app: immich-ml
