Kubernetes/apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: utilities
spec:
  ports:
    - name: http
      port: 3001
      targetPort: http
    - name: postgres
      port: 5432
  selector:
    app: immich
